<resources>
    <string name="app_name">project1</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember me</string>
</resources>